--- a/.github/workflows/cypressgit.yml
+++ b/.github/workflows/cypressgit.yml
@@ -3,10 +3,10 @@ name: Cypress Tests
 on:
   push:
     branches:
-      - main
+      - branch2
   pull_request:
     branches:
-      - main
+      - branch2
 
 jobs:
   cypress-run:
