--- a/.github/workflows/cypressgit.yml
+++ b/.github/workflows/cypressgit.yml
@@ -4,16 +4,13 @@ on:
   push:
     branches:
       - branch2
-  pull_request:
-    branches:
-      - branch2
 
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Setup Node.js
@@ -22,10 +19,7 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm ci  # safer/faster than npm install in CI
-
-      - name: Verify Cypress installed
-        run: npx cypress verify
+        run: npm ci
 
       - name: Run Cypress tests
-        run: npx cypress run
+        uses: cypress-io/github-action@v5
