--- a/.github/workflows/cypressgit.yml
+++ b/.github/workflows/cypressgit.yml
@@ -1,25 +1,26 @@
-name: Cypress Tests
+name: cypressgithubactions
 
 on:
   push:
     branches:
-      - branch2
+      - branch2  # Trigger only when code is pushed (merged) to main branch
 
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        containers: [1, 2, 3, 4]
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run Cypress tests
+      - name: Cypress run
         uses: cypress-io/github-action@v5
+        with:
+          record: true
+          parallel: true
+        env:
+          CYPRESS_RECORD_KEY: 3bbbacbe-fa26-4365-b07d-512ccb80b548
