--- a/.github/workflows/cypressgit.yml
+++ b/.github/workflows/cypressgit.yml
@@ -3,7 +3,7 @@ name: cypressgithubactions
 on:
   push:
     branches:
-      - branch2  # Trigger only when code is pushed (merged) to main branch
+      - branch2  # Trigger only when code is pushed to branch2
 
 jobs:
   cypress-run:
@@ -11,16 +11,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        containers: [1, 2, 3, 4]
+        containers: [1, 2, 3, 4]  # Run in 4 parallel containers
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
           record: true
           parallel: true
+          group: 'E2E Tests'
         env:
-          CYPRESS_RECORD_KEY: 3bbbacbe-fa26-4365-b07d-512ccb80b548
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          CYPRESS_PASSWORD: ${{ secrets.PASSWORD }}
